testsuite/tests/warnings/should_fail/CaretDiagnostics2.hs
module CaretDiagnostics2 where

У&lЛе5kН
